fix: Add user date of birth
