# backend/api/openapi/openapi.yml
@@ -518,6 +518,9 @@ components:
         gender:
           type: string
           enum: [ Male, Female ]
+        date_of_birth:
+          type: integer
+          format: int64
         weight:
           type: integer
         height:
@@ -536,9 +539,10 @@ components:
       required:
         - utgid
         - gender
-        - goal
+        - date_of_birth
         - weight
         - height
+        - goal
         - physical_activity
         - name
       properties:
@@ -548,6 +552,9 @@ components:
         gender:
           type: string
           enum: [ Male, Female ]
+        date_of_birth:
+          type: integer
+          format: int64
         weight:
           type: integer
         height:
@@ -566,6 +573,7 @@ components:
       required:
         - name
         - gender
+        - date_of_birth
         - weight
         - height
         - goal
@@ -578,6 +586,9 @@ components:
         gender:
           type: string
           enum: [ Male, Female ]
+        date_of_birth:
+          type: integer
+          format: int64
         goal:
           type: string
           enum: [ LoseWeight, GainMuscleMass ]
