# backend/internal/interfaces/http/dto/user_request.go
@@ -5,6 +5,7 @@ import "github.com/isiyar/daily-energy/backend/internal/domain/models"
 type UserRequest struct {
 	Name             string                  `json:"name" validate:"required,min=1,max=50"`
 	Gender           models.Gender           `json:"gender" validate:"required"`
+	DateofBirth int64 `json:"date_of_birth" validate:"required"`
 	Weight           int                     `json:"weight" validate:"required,min=10,max=300"`
 	Height           int                     `json:"height" validate:"required,min=10,max=300"`
 	Goal             models.Goal             `json:"goal" validate:"required"`
